--- a/.github/workflows/on-release-main.yml
+++ b/.github/workflows/on-release-main.yml
@@ -32,6 +32,11 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     needs: [set-version]
+    environment:
+      name: pypi
+      url: https://pypi.org/p/odoo-addons-path
+    permissions:
+      id-token: write
     steps:
       - name: Check out
         uses: actions/checkout@v4
@@ -47,7 +52,5 @@ jobs:
       - name: Build package
         run: uv build
 
-      - name: Publish package
-        run: uv publish
-        env:
-          UV_PUBLISH_TOKEN: ${{ secrets.PYPI_TOKEN }}
+      - name: Publish package to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
