--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,6 +15,11 @@ jobs:
 
     permissions:
       contents: write
+      id-token: write
+
+    environment:
+      name: pypi
+      url: https://pypi.org/p/odoo-addons-path
 
     steps:
 
@@ -34,3 +39,23 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           git_committer_name: "github-actions"
           git_committer_email: "actions@users.noreply.github.com"
+
+      - name: Checkout at release tag
+        if: steps.release.outputs.released == 'true'
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ steps.release.outputs.tag }}
+
+      - name: Set up the environment
+        if: steps.release.outputs.released == 'true'
+        uses: ./.github/actions/setup-python-env
+
+      - name: Build Package
+        if: steps.release.outputs.released == 'true'
+        run: make build
+
+      - name: Publish package distributions to PyPI
+        if: steps.release.outputs.released == 'true'
+        uses: pypa/gh-action-pypi-publish@v1.13.0
+        with:
+          packages-dir: dist
