[skip ci]chore: add AGENTS.md

--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,5 +1,5 @@
 # Changes here will be overwritten by Copier; NEVER EDIT MANUALLY
-_commit: v1.0.3
+_commit: v1.2.0
 _src_path: https://github.com/trobz/trobz-python-template.git
 author_email: doanminhtri8183@gmail.com
 author_username: trisdoan
@@ -7,6 +7,7 @@ enable_github_action: true
 package_name: odoo_addons_path
 project_description: Create the ultimate Odoo addons_path constructor
 project_name: odoo-addons-path
+project_type: cli
 publish_to_pypi: true
 repository_name: odoo-addons-path
 repository_namespace: trobz
